--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -58,7 +58,7 @@
 							<path class="stroke" style="fill:none;stroke-width:2;" d="M 93.078179,67.15676 86.642094,62.529428 C 86.541515,58.780315 85.133289,53.754031 79.275201,50.510961 73.417112,47.26789 66.644047,49.27737 63.60429,52.152721 l 9.970187,1.845326 c 3.013677,6.145117 2.314626,11.760376 -3.344468,16.667769 L 59.87824,69.585875 c 2.196109,4.902723 6.68338,7.652406 11.292191,8.177931 4.608811,0.525525 9.388099,-1.678455 11.440011,-4.088376 l 6.436431,4.726151"></path>
 						</svg>
 					</div>
-					<h2>Fix Edge Legacy</h2><!-- Only show warning on first click -->
+					<h2>Unblock Edge Legacy</h2><!-- Only show warning on first click -->
 					<p>Applies registry modifications to unblock Edge Legacy</p>
 					<div class="action">
 						<button id="unblock_button" type="button" onclick="fixOldEdge(event);">Unblock</button>
